--- a/src/components/MultiSelectionSearchBox/index.css
+++ b/src/components/MultiSelectionSearchBox/index.css
@@ -19,6 +19,7 @@
   max-width: calc(100vw - 220px);
   position: relative;
   overflow-x: scroll;
+  scroll-padding-left: 20px;
 }
 
 .search-button-container {
@@ -44,6 +45,7 @@
   border: none;
   display: flex;
   font-size: 16px;
+  flex-grow: 1;
   outline: none;
   margin-left: 8px;
   min-height: 30px;
